# rcopy

./: README.md  pyproject.toml  rcopy.py  setup.py
rcopy/: __init__.py  mac.py  windows.py
