[tool.poetry]
name = "rcopy"
version = "0.1.0"
description = ""
authors = ["Leonardo Guarnieri de Bastiani <leogbastiani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = "^1.8.2"
pynput = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
